--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,14 +1,37 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <link rel="stylesheet" href="./css/navbar.css">
+    <script src="https://kit.fontawesome.com/5ef6a4e4a4.js" crossorigin="anonymous"></script>
+    <title>Colecciones</title>
+</head>
 <body>
-    <h1>ENTRASTE AL APP SICREB</h1> 
-    <div>
-        <h2> Bienvenido
-        </h2>
-    </div>
+    <!--navbar-->
+    <header class="header">
+        <div class="logo">
+            <img src="img/humboldtlogo2.png" alt="Logo">
+        </div>
+        <nav>
+            <h1 class="titulo-nav">COLECCIONES</h1> 
+        </nav>
+        <a type="button" class="btn-cs" href="logout"><i class="fa-solid fa-arrow-right-from-bracket"></i></a>
+        
+    </header>
 
-    <div >
-        <a type="button" class="px-3 btn btn-danger" href="logout">Cerrar Sesión</a>
-    </div>
 
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js" integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK" crossorigin="anonymous"></script>
 </body>
+</html>
+
+
+
+
+
+
+
+
+
