--- a/views/register.ejs
+++ b/views/register.ejs
@@ -7,7 +7,7 @@
     <!-- Bootstrap CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
-    <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
+    <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script><!-- script para usar jquery en el proceso de verifiacion de contraseña -->
     <script src="./js/script.js"></script>
     <style>
     body {  
@@ -67,5 +67,6 @@
         </div>
     </div>
 </div>
+
 </body>
 </html>
