--- a/views/login.ejs
+++ b/views/login.ejs
@@ -22,7 +22,7 @@
     </div>-->
     <main class="form-signin w-100 m-auto text-center shadow-lg  mb-10">
         <form id="formLogin" action="/login" method="post">
-            <img class="mb-4" src="img/humboldtlogo.png" alt="" width="115" height="130">
+            <img class="mb-4" src="img/LOGO-COLECCIONES-1.png" alt="" width="300" height="auto">
             <h1 class="h3 mb-3 fw-normal">! Bienvenido !</h1>
 
         <div class="form-floating">
@@ -40,7 +40,7 @@
         <br>
         <a href="register" class="enlace ">Registrarse</a>
         <br>
-        <a href="" class="enlace">¿Olvido su contraseña?</a>
+        <a href="olvido" class="enlace">¿Olvido su contraseña?</a>
         
     </main>
 
