--- a/views/restaurar.ejs
+++ b/views/restaurar.ejs
@@ -35,11 +35,11 @@
                     </div>
                     <div class="mb-3">
                         <label for="pass" class="form-label">Nueva contraseña</label>
-                        <input required id="pass" name="pass" type="text" class="form-control">              
+                        <input required id="pass" name="pass" type="password" class="form-control">              
                     </div>
                     <div class="mb-3">
                         <label for="pass2" class="form-label">Confirmar contraseña</label>
-                        <input required id="pass2" name="pass2" type="text" class="form-control"> 
+                        <input required id="pass2" name="pass2" type="password" class="form-control"> 
                         <!-- Error text -->
                         <span id="error" class="label label-info"></span>             
                     </div>
