--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,13 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/navbar.css">
+    <link rel="stylesheet" href="./css/styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/5ef6a4e4a4.js" crossorigin="anonymous"></script>
     <title>Colecciones</title>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </head>
 <body>
-    <!--navbar-->
+
+<!--navbar-->
     <header class="header">
         <div class="logo">
             <img src="img/humboldtlogo2.png" alt="Logo">
@@ -19,11 +22,63 @@
             <h1 class="titulo-nav">COLECCIONES</h1> 
         </nav>
         <a type="button" class="btn-cs" href="logout"><i class="fa-solid fa-arrow-right-from-bracket"></i></a>
-        
     </header>
 
+<!--CONTENIDO-->
+    <section class="galeria container">
+        <div class="row">
+            <div class="col-lg-4 col-md-6 col-sm-12 text-center">
+                <p>Anfibios</p>
+                <a href="consulta"><img src="img/rana.png" alt="Anfibios"></a>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-12 text-center">
+                <p>Aves</p>
+                <a href="consulta"><img src="img/gorrion.png" alt="Aves"></a>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-12 text-center">
+                <p>Huevos</p>
+                <a href="consulta"><img src="img/huevos.png" alt="Huevos"></a>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-12 text-center">
+                <p>Invertebrados</p>
+                <a href="consulta"><img src="img/mosquito.png" alt="Invertebrados"></a>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-12 text-center">
+                <p>Invertebrados no Insectos</p>
+                <a href="consulta"><img src="img/arana.png" alt="Invertebrados no insectos"></a>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-12 text-center">
+                <p>Mamíferos</p>
+                <a href="consulta"><img src="img/oso-polar.png" alt="Mamiferos"></a>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-12 text-center">
+                <p>Peces</p>
+                <a href="consulta"><img src="img/pez.png" alt="Peces"></a>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-12 text-center">
+                <p>Plantas</p>
+                <a href="consulta"><img src="img/planta.png" alt="Plantas"></a>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-12 text-center">
+                <p>Reptiles</p>
+                <a href="consulta"><img src="img/lagartija.png" alt="Reptiles"></a>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-12 text-center">
+                <p>Semillas</p>
+                <a href="consulta"><img src="img/sesamo.png" alt="Semillas"></a>
+            </div>
+        </div>
+    </section>
+<!--FOOTER-->
+    <footer class="footer">
+        <p>
+            INSTITUTO DE INVESTIGACIÓN DE RECURSOS BIOLÓGICOS ALEXANDER VON HUMBOLDT <br>
+            © 2020 INSTITUTO HUMBOLDT. TODOS LOS DERECHOS RESERVADOS. | CRÉDITOS<br>
+            CALLE 28 A # 15 - 09 BOGOTÁ D.C., COLOMBIA<br>
+            PBX: (+57) 601 320 2767 HORARIOS DE ATENCIÓN: LUNES A VIERNES, 8:00A.M. - 5:00P.M.<br>
+        </p>
+    </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js" integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK" crossorigin="anonymous"></script>
 </body>
 </html>
 
