--- a/views/index.ejs
+++ b/views/index.ejs
@@ -26,49 +26,52 @@
 
 <!--CONTENIDO-->
     <section class="galeria container">
-        <div class="row">
-            <div class="col-lg-4 col-md-6 col-sm-12 text-center">
-                <p>Anfibios</p>
-                <a href="consulta"><img src="img/rana.png" alt="Anfibios"></a>
+        <form method="post" class="formulario" action="/consulta">
+            <div class="row">
+                <div class="col-lg-4 col-md-6 col-sm-12 text-center">
+                    <p>Anfibios</p>
+                    <button name="especie" value="IAvH-Am"><img src="img/rana.png" alt="Anfibios"></button>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12 text-center">
+                    <p>Aves</p>
+                    <button name="especie" value="IAvH-A"><img src="img/gorrion.png" alt="Aves"></button>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12 text-center">
+                    <p>Huevos</p>
+                    <button name="especie" value="IAvH-CJM"><img src="img/huevos.png" alt="Huevos"></button>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12 text-center">
+                    <p>Invertebrados</p>
+                    <button name="especie" value="IAvH-E"><img src="img/mosquito.png" alt="Invertebrados"></button>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12 text-center">
+                    <p>Invertebrados no Insectos</p>
+                    <button name="especie" value="IAvH-I"><img src="img/arana.png" alt="Invertebrados no insectos"></button>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12 text-center">
+                    <p>Mamíferos</p>
+                    <button name="especie" value="IAvH-M"><img src="img/oso-polar.png" alt="Mamiferos"></button>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12 text-center">
+                    <p>Peces</p>
+                    <button name="especie" value="IAvH-P"><img src="img/pez.png" alt="Peces"></button>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12 text-center">
+                    <p>Plantas</p>
+                    <button name="especie" value="FMB"><img src="img/planta.png" alt="Plantas"></button>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12 text-center">
+                    <p>Reptiles</p>
+                    <button name="especie" value="IAvH-R"><img src="img/lagartija.png" alt="Reptiles"></button>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12 text-center">
+                    <p>Semillas</p>
+                    <button name="especie" value="IAvH-CS"><img src="img/sesamo.png" alt="Semillas"></button>
+                </div>
             </div>
-            <div class="col-lg-4 col-md-6 col-sm-12 text-center">
-                <p>Aves</p>
-                <a href="consulta"><img src="img/gorrion.png" alt="Aves"></a>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-12 text-center">
-                <p>Huevos</p>
-                <a href="consulta"><img src="img/huevos.png" alt="Huevos"></a>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-12 text-center">
-                <p>Invertebrados</p>
-                <a href="consulta"><img src="img/mosquito.png" alt="Invertebrados"></a>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-12 text-center">
-                <p>Invertebrados no Insectos</p>
-                <a href="consulta"><img src="img/arana.png" alt="Invertebrados no insectos"></a>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-12 text-center">
-                <p>Mamíferos</p>
-                <a href="consulta"><img src="img/oso-polar.png" alt="Mamiferos"></a>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-12 text-center">
-                <p>Peces</p>
-                <a href="consulta"><img src="img/pez.png" alt="Peces"></a>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-12 text-center">
-                <p>Plantas</p>
-                <a href="consulta"><img src="img/planta.png" alt="Plantas"></a>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-12 text-center">
-                <p>Reptiles</p>
-                <a href="consulta"><img src="img/lagartija.png" alt="Reptiles"></a>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-12 text-center">
-                <p>Semillas</p>
-                <a href="consulta"><img src="img/sesamo.png" alt="Semillas"></a>
-            </div>
-        </div>
+        </form>
     </section>
+    
 <!--FOOTER-->
     <footer class="footer">
         <p>
