--- a/views/register.ejs
+++ b/views/register.ejs
@@ -49,7 +49,7 @@
                     <div class="mb-3">
                         <label class="form-label">Confirme su Contraseña</label>
                         <input required id="pass2" type="password" class="form-control">
-                        <!-- Error text -->
+                        <!-- Error text configurado en el script script.js -->
                         <span id="error" class="label label-info"></span>
                     </div>
                     <div class="mb-3">
