--- a/views/resultado.ejs
+++ b/views/resultado.ejs
@@ -97,7 +97,7 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <% resultadoConsulta.forEach((busqueda)=> { %>
+                        <% resultadoConsulta.forEach((busqueda)=> { %> <!--resultado consulta es el dato que se arroja desde el authController en el modulo de listar-->
                         <tr>
                             <td><%= busqueda.dwc_iavh_Id  %></td>
                             <td><%= busqueda.Numero_de_Catalogo  %></td>
