--- a/views/olvido.ejs
+++ b/views/olvido.ejs
@@ -49,7 +49,7 @@
         </div>
     </div>
 </div>
-
+<!-- script de las alertas -->
 <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <% if(alert){ %>
     <script>
